--- a/index.html
+++ b/index.html
@@ -55,17 +55,28 @@
     <section id="about" class="content-about">
         <div class="bg-overlay2">
             <h2 class="heading-about">Crisxo</h2>
-                <p class="text-about">Je suis designer web, developpeur, freelance basé à Bordeaux / France.<br>
+                <p class="text-about">Designer web, developpeur, basé à Bordeaux / France.<br>
                 Actuellement freelance, je suis aussi designer graphique pour tous les besoins liés au "print" tels que la création de logos, illustrations, brochures, catalogues, magazines, affiches...<br> 
-                Ma passion est d'utiliser toutes les technologies liées à la communication et à l'image.<br><br>
-                <strong>COMPETENCES</strong>:<br>
-                 LANGUAGES & FRAMEWORKS:<br>
-                HTML5, CSS3, Javascript, jQuery, Bootstrap4, Sass, Php.<br>
-                OUTILS & EXPERTISE:<br>
-                Print, Responsive Web Design, Photoshop, Illustrator, Indesign, Quark Xpress, 3DsMax.
+                Ma passion est d'utiliser toutes les technologies liées à la communication et à l'image.<br> <br>
+                    <strong>COMPETENCES</strong>:<br> <br>
+                    EXPERTISE & OUTILS:<br>
+                Print, Responsive Web Design;<br> Photoshop, Illustrator, Indesign, Quark Xpress, 3DsMax.<br> <br>
+                    LANGUAGES & FRAMEWORKS:<br>
+                HTML5, CSS3, Javascript, jQuery, Bootstrap4, Sass, Php...
                 </p>
-            <div class="collg">
-            <img class="img-circle img-responsive" src="" alt="">
+            <div class="collicon">
+                <img class="icon icon0" src="assets/img/HTML-icon.png" alt="HTML-icon">
+                <img class="icon icon1" src="assets/img/CSS-icon.png" alt="CSS-icon">
+                <img class="icon icon2" src="assets/img/Bootstrap-icon.png" alt="Bootstrap-icon">
+                <img class="icon icon3" src="assets/img/JS-icon.png" alt="JS-icon">
+                <img class="icon icon4" src="assets/img/jQ-icon.png" alt="jQ-icon">
+                <img class="icon icon5" src="assets/img/PHP-icon.png" alt="PHP-icon">
+                <img class="icon icon6" src="assets/img/sass-icon.png" alt="sass-icon">
+                <img class="icon icon7" src="assets/img/xd-icon.png" alt="xd-icon">
+                <img class="icon icon8" src="assets/img/Ps-icon.png" alt="Ps-icon">
+                <img class="icon icon9" src="assets/img/ai-icon.png" alt="ai-icon">
+                <img class="icon icon10" src="assets/img/Pdf-icon.png" alt="Pdf-icon">
+                <img class="icon icon11" src="assets/img/wordpress-icon.png" alt="wordpress-icon">
             </div>
         </div>
     </section>
@@ -192,19 +203,19 @@
                 <h2 class="contact-title">Contact</h2>
                 <div class="champs">
                 <label for="nom">Nom</label>
-                <input type="text" name="nom" value="" required placeholder="Nom"><br>
+                <input class="zone" type="text" name="nom" value="" required placeholder="Nom"><br>
                 <label for="prenom">Prénom</label>
-                <input type="text" name="prenom" value="" required placeholder="Prénom"><br>
+                <input class="zone" type="text" name="prenom" value="" required placeholder="Prénom"><br>
                 <label for="societe">Société</label>
-                <input type="text" name="societe" value="" required placeholder="Société"><br>
+                <input class="zone" type="text" name="societe" value="" required placeholder="Société"><br>
                 <label for="telephone">Téléphone</label>
-                <input type="tel" name="telephone" value="" required placeholder="0102030405" maxlength="10" size="10"><br>
+                <input class="zone" type="tel" name="telephone" value="" required placeholder="0102030405" maxlength="10" size="10"><br>
                 <label for="email">Email</label>
-                <input type="email" name="email" value="" required placeholder="Dupont@gmail.com"><br>
+                <input class="zone" type="email" name="email" value="" required placeholder="Dupont@gmail.com"><br>
                 <label for="textarea">Commentaire</label>
-                <textarea name="textarea" required placeholder="Votre texte"></textarea><br>
+                <textarea class="zone" name="textarea" required placeholder="Votre texte"></textarea><br>
                 <br>
-                <input type="submit" name="envoi" value="Envoyer">
+                <input class="send" type="submit" name="envoi" value="Envoyer">
                 </div>
             </div>
         </div>
