--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <h2 class="heading-about">Crisxo</h2>
                 <p class="text-about">Designer web, developpeur, basé à Bordeaux / France.<br>
                 Actuellement freelance, je suis aussi designer graphique pour tous les besoins liés au "print" tels que la création de logos, illustrations, brochures, catalogues, magazines, affiches...<br> 
-                Ma passion est d'utiliser toutes les technologies liées à la communication et à l'image.<br> <br>
-                    <strong>COMPETENCES</strong>:<br> <br>
-                    EXPERTISE & OUTILS:<br>
+                Ma passion est d'utiliser toutes les technologies liées à la communication et à l'image.</p>
+                    <p class="text-about2">COMPETENCES</p>:
+                    <p class="text-about">EXPERTISE & OUTILS:
                 Print, Responsive Web Design;<br> Photoshop, Illustrator, Indesign, Quark Xpress, 3DsMax.<br> <br>
                     LANGUAGES & FRAMEWORKS:<br>
-                HTML5, CSS3, Javascript, jQuery, Bootstrap4, Sass, Php...
+                HTML5, CSS3, Javascript, jQuery, Bootstrap4, Sass, Php, MySQL...
                 </p>
             <div class="collicon">
                 <img class="icon icon0" src="assets/img/HTML-icon.png" alt="HTML-icon">
@@ -75,7 +75,7 @@
                 <img class="icon icon7" src="assets/img/xd-icon.png" alt="xd-icon">
                 <img class="icon icon8" src="assets/img/Ps-icon.png" alt="Ps-icon">
                 <img class="icon icon9" src="assets/img/ai-icon.png" alt="ai-icon">
-                <img class="icon icon10" src="assets/img/Pdf-icon.png" alt="Pdf-icon">
+                <img class="icon icon10" src="assets/img/git-icon.png" alt="git-icon">
                 <img class="icon icon11" src="assets/img/wordpress-icon.png" alt="wordpress-icon">
             </div>
         </div>
