ajout de liens dans l'index html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <!-- Portfolio img1 -->
             <div class="items-container">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                        <a href="https://#" class="portfolio-link" target="_blank" data-toggle="modal">
+                        <a href="https://fr.wordpress.org/" class="portfolio-link" target="_blank" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                             </div>
@@ -108,7 +108,7 @@
               
               <!-- Portfolio img2 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://#" class="portfolio-link" target="_blank" data-toggle="modal">
+                    <a href="https://fr.wordpress.com/" class="portfolio-link" target="_blank" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                             </div>
@@ -124,7 +124,7 @@
               
               <!-- Portfolio img3 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                        <a href="https://#" class="portfolio-link" target="_blank" data-toggle="modal">
+                        <a href="https://osonscomprendre.com/" class="portfolio-link" target="_blank" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                             </div>
